Twenty Fourteen: Adjust spacing for menu toggle button to avoid overflowing accented characters.
Broken in [28698].

props schoenwaldnils.
fixes #27456.
Built from https://develop.svn.wordpress.org/trunk@28756


git-svn-id: http://core.svn.wordpress.org/trunk@28570 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -1021,7 +1021,7 @@ span + .edit-link:before,
 .menu-toggle:before {
 	color: #fff;
 	content: "\f419";
-	padding: 15px;
+	padding: 16px;
 }
 
 .menu-toggle:active,
@@ -1386,7 +1386,7 @@ a.post-thumbnail:hover {
 	-webkit-font-smoothing: antialiased;
 	content: '\f452';
 	display: inline-block;
-	font: normal 48px/1 Genericons;	
+	font: normal 48px/1 Genericons;
 	position: absolute;
 	top: 0;
 	left: 10px;
